# PersonalProjects

./: .gitignore
DepCal/: Cargo.toml
DepCal/src/: main.rs
MandelbrotVisualizer/: .gitignore
MandelbrotVisualizer/GrahpToVideo/: Cargo.toml
MandelbrotVisualizer/GrahpToVideo/src/: kernel.cu  main.rs  main1.rs
Matrix/: Cargo.toml
Matrix/src/: lib.rs
Matrix/src/computer/: cli.rs  error.rs  ffi.rs  io.rs  mod.rs  output.rs
Matrix/src/math/: determinant.rs  inverse.rs  matrix.rs  mod.rs  norms.rs  properties.rs  ranks.rs  row_ops.rs  scalar.rs  solve.rs
Matrix/src/math/asuv/: decompose.rs
Matrix/src/math/compressions/: diagnal_low_rank.rs  low_rank.rs  mod.rs  rounded_low_rank.rs
Matrix/src/math/decompositions/: evd.rs  lu.rs  mod.rs  qr.rs  svd.rs
Matrix/src/math/spectral/: condition.rs  eigenvalues.rs  mod.rs  singular_values.rs
rusty_regress/Matrix/: Cargo.toml
