[package]
name = "mandelbrot_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.19", features = ["std", "driver", "nvrtc", "cuda-version-from-build-system"] }
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
